--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/preview-kit": "^5.1.11",
     "@sanity/vision": "^3.61.0",
     "better-auth": "^0.5.2-beta.4",
     "class-variance-authority": "^0.7.0",
@@ -21,13 +34,15 @@
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
-    "next-sanity": "^9.5.5",
+    "next-sanity": "^9.8.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "sanity": "^3.61.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
