--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@sanity/vision": "^3.61.0",
     "@uploadthing/react": "^7.1.1",
     "bcrypt": "^5.1.1",
-    "better-auth": "^0.5.2-beta.4",
+    "better-auth": "^0.5.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
