--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-kit": "^5.1.11",
     "@sanity/vision": "^3.61.0",
     "@uploadthing/react": "^7.1.1",
     "bcrypt": "^5.1.1",
-    "better-auth": "^0.5.3",
+    "better-auth": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -47,6 +48,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "resend": "^4.0.1",
     "sanity": "^3.61.0",
     "sonner": "^1.7.0",
     "styled-components": "^6.1.13",
