--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.9.5",
     "@prisma/adapter-neon": "^5.21.1",
@@ -23,6 +24,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
@@ -39,6 +41,8 @@
     "better-auth": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.453.0",
@@ -46,7 +50,9 @@
     "next-sanity": "^9.8.8",
     "next-themes": "^0.4.3",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "resend": "^4.0.1",
     "sanity": "^3.61.0",
@@ -56,7 +62,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.3.0",
     "ws": "^8.18.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
