--- a/package.json
+++ b/package.json
@@ -32,10 +32,17 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-kit": "^5.1.11",
     "@sanity/vision": "^3.61.0",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-placeholder": "^2.10.3",
+    "@tiptap/extension-text-style": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "@uploadthing/react": "^7.1.1",
     "bcrypt": "^5.1.1",
     "better-auth": "^1.0.2",
