--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^15.1.2",
     "next-sanity": "^9.8.8",
     "next-themes": "^0.4.3",
     "react": "^18",
