--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.453.0",
-    "next": "^15.1.2",
+    "next": "14.2.15",
     "next-sanity": "^9.8.8",
     "next-themes": "^0.4.3",
     "react": "^18",
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
