--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "embla-carousel-react": "^8.3.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-sanity": "^9.8.8",
