--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.453.0",
+    "mysql2": "^3.14.2",
     "next": "14.2.15",
     "next-sanity": "^9.8.8",
     "next-themes": "^0.4.3",
