--- a/vercel.json
+++ b/vercel.json
@@ -63,5 +63,7 @@
     "app/api/uploadthing/route.ts": {
       "maxDuration": 300
     }
-  }
+  },
+  "buildCommand": "npm run build",
+  "installCommand": "npm install --legacy-peer-deps"
 }
