--- a/package.json
+++ b/package.json
@@ -87,8 +87,10 @@
     "@types/ws": "^8.5.13",
     "eslint": "^9",
     "eslint-config-next": "^15.0.0",
+    "plaiceholder": "^3.0.0",
     "postcss": "^8",
     "prisma": "^5.21.1",
+    "sharp": "^0.34.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
