--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
@@ -75,7 +76,8 @@
     "uploadthing": "^7.5.2",
     "ws": "^8.18.0",
     "zod": "^3.25.0",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "prisma": "^5.21.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
@@ -87,7 +89,6 @@
     "eslint-config-next": "^15.0.0",
     "plaiceholder": "^3.0.0",
     "postcss": "^8",
-    "prisma": "^5.21.1",
     "sharp": "^0.34.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
