chore: update Vercel build command to include Prisma migrations
- Modified the build command in vercel.json to run Prisma generate and migrate deploy before the Next.js build process, ensuring the latest database schema is applied during deployment.

--- a/vercel.json
+++ b/vercel.json
@@ -64,6 +64,6 @@
       "maxDuration": 300
     }
   },
-  "buildCommand": "npm run build",
+  "buildCommand": "prisma generate && prisma migrate deploy && next build",
   "installCommand": "npm install --legacy-peer-deps"
 }
