--- a/package.json
+++ b/package.json
@@ -59,12 +59,13 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.453.0",
     "mysql2": "^3.14.2",
-    "next": "^15.0.0",
+    "next": "^15.5.7",
     "next-sanity": "^9.8.8",
     "next-themes": "^0.4.3",
-    "react": "^19.0.0",
+    "prisma": "^5.21.1",
+    "react": "^19.2.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^3.0.6",
@@ -77,8 +78,7 @@
     "uploadthing": "^7.5.2",
     "ws": "^8.18.0",
     "zod": "^3.25.0",
-    "zustand": "^5.0.1",
-    "prisma": "^5.21.1"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
