--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "embla-carousel-auto-scroll": "^8.5.2",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "html-react-parser": "^5.2.11",
     "lucide-react": "^0.453.0",
     "mysql2": "^3.14.2",
     "next": "^15.5.7",
