feat: Add automatic PDF thumbnails using react-pdf

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
+    "react-pdf": "^10.2.0",
     "react-resizable-panels": "^3.0.6",
     "resend": "^4.0.1",
     "sanity": "^3.61.0",
